# trace

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.zed/: settings.json  tasks.json
crates/trace-app/: Cargo.toml  tauri.conf.json
crates/trace-app/capabilities/: default.json
crates/trace-app/src/: gen.rs  lib.rs  main.rs  startup.rs  state.rs
crates/trace-app/src/commands/: generate.rs  links.rs  logs.rs  mod.rs  nodes.rs  search.rs  settings.rs  suggest.rs  tags.rs  window.rs
crates/trace-core/: Cargo.toml
crates/trace-core/src/: error.rs  hash.rs  id.rs  lib.rs
crates/trace-core/src/markdown/: doc.rs  links.rs  mod.rs  parse.rs  serialize.rs
crates/trace-core/src/model/: mod.rs
crates/trace-services/: Cargo.toml
crates/trace-services/src/: error.rs  events.rs  folder_service.rs  lib.rs  link_service.rs  log_service.rs  node_service.rs  search_service.rs  settings_service.rs  suggest_service.rs  tag_service.rs
crates/trace-store/: Cargo.toml
crates/trace-store/src/: lib.rs
crates/trace-store/src/cache/: mod.rs
crates/trace-store/src/db/: folders_repo.rs  links_repo.rs  logs_repo.rs  mod.rs  nodes_repo.rs  schema.sql
crates/trace-store/src/db/migrations/: mod.rs
crates/trace-store/src/index/: mod.rs  schema.rs  searcher.rs  writer.rs
crates/trace-store/src/vault/: reader.rs  writer.rs
crates/trace-test/: Cargo.toml
crates/trace-test/src/: gen.rs  main.rs
crates/trace-workers/: Cargo.toml
crates/trace-workers/src/: file_sync.rs  git.rs  indexer.rs  lib.rs  link_extractor.rs  scanner.rs  util.rs  watcher.rs
ui/: package-lock.json  package.json  vite.config.js
ui/src/: app.css  app.html  global.css
ui/src/lib/: TitleBar.svelte  VirtualList.svelte  actions.ts  types.ts
ui/src/lib/actions/: clickOutside.ts  index.ts
ui/src/lib/components/: ContextMenu.svelte  CustomSelect.svelte  FavoritesPanel.svelte  FindBar.svelte  LogsPanel.svelte  NodeListItem.svelte  Panel.svelte  RecentsPanel.svelte  RightPanel.svelte  SearchPanel.svelte  SettingsModal.svelte  Spinner.svelte  StatusBar.svelte  TitleBar.svelte  Tooltip.svelte
ui/src/lib/editor/: Editor.svelte  EditorLRU.ts  doc.ts
ui/src/lib/editor/extensions/: FindReplace.ts  Tag.ts  TitleEnforcer.ts  WikiLink.ts
ui/src/lib/keybindings/: defaults.ts  index.ts  registry.svelte.ts  types.ts
ui/src/lib/stores/: contextMenu.svelte.ts  logs.svelte.ts  notes.svelte.ts  settings.svelte.ts
ui/src/lib/utils/: dropdown.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/static/: fonts.css
