[workspace]
resolver = "2"
members = [
    "crates/trace-core",
    "crates/trace-store",
    "crates/trace-services",
    "crates/trace-workers",
    "crates/trace-app",
    "crates/trace-test",
]
# trace-test is a dev tool: excluded from `cargo build/check --workspace`,
# but still reachable as `cargo build -p trace-test`.
default-members = [
    "crates/trace-core",
    "crates/trace-store",
    "crates/trace-services",
    "crates/trace-workers",
    "crates/trace-app",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
notify-debouncer-mini = "0.4"
walkdir = "2"
regex = "1"
pulldown-cmark = "0.12"
fst = "0.4"
