[package]
name = "trace-app"
version = "0.1.0"
description = "Trace — Tauri application entry point"
authors = []
edition = "2021"

[lib]
name = "trace_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
trace-core = { path = "../trace-core" }
trace-store = { path = "../trace-store" }
trace-services = { path = "../trace-services" }
trace-workers = { path = "../trace-workers" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
