[package]
name = "trace-app"
version = "0.1.0"
description = "Trace — Tauri application entry point"
authors = []
edition = "2021"

[[bin]]
name = "trace"
path = "src/main.rs"

[lib]
name = "trace_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
rand = { workspace = true }
serde = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { workspace = true }
trace-core = { path = "../trace-core" }
trace-services = { path = "../trace-services" }
trace-store = { path = "../trace-store" }
trace-workers = { path = "../trace-workers" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
