[package]
name = "trace-services"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
trace-core = { path = "../trace-core" }
trace-store = { path = "../trace-store" }
tracing = { workspace = true }
