[package]
name = "trace-workers"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
trace-core = { path = "../trace-core" }
trace-services = { path = "../trace-services" }
trace-store = { path = "../trace-store" }
tracing = { workspace = true }
walkdir = { workspace = true }
